Update Profitable App Profiles for the App Store and Google Play Markets.ipynb

--- a/Profitable App Profiles for the App Store and Google Play Markets.ipynb
+++ b/Profitable App Profiles for the App Store and Google Play Markets.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <p style=\"text-align: left;\"> Profitable Apps And The Drivers For Growing Our User Base</p>\n",
+    "### Profitable Apps And The Drivers For Growing Our User Base\n",
     "\n",
     "This project is aimed at delivering an analysis of the key performance indicators for the apps sold via [Apple](https://www.apple.com/uk/ios/app-store/) and [Google](https://play.google.com/store?hl=en) store. Having an understanding of the main drivers of our user base in correlation with apps profitablity in each online store should give us a valuable insight to help with all future development work.\n",
     "\n",
